# grammar-utils

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
grammars/calc/: calc.l
python/grammar_utils/: __init__.py  _internal.pyi
python/grammar_utils/constrain/: __init__.py
python/grammar_utils/parse/: __init__.py
resources/test/re-examples/: triples.txt
src/: lib.rs  lr1.rs  py.rs  re.rs
