[package]
name = "grammar-utils"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
regex = "1.10"
regex-automata = "0.4"
itertools = "0.14"
cfgrammar = { version = "0.13", features = ["serde"] }
lrtable = { version = "0.13", features = ["serde"] }
lrlex = "0.13"
lrpar = { version = "0.13", features = ["serde"] }
indexmap = "2.2"
clap = { version = "4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
numpy = "0.23"
lru = "0.12"
anyhow = "1.0"
rayon = "1.10"
pyo3 = { version = "0.23", features = ["anyhow", "abi3-py310", "extension-module"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

[[bench]]
name = "benchmark"
harness = false
