[package]
name = "grammar-utils"
version = "0.1.5"
edition = "2021"
publish = false

[dependencies]
regex = "1.12"
regex-automata = "0.4"
itertools = "0.14"
cfgrammar = { version = "0.14", features = ["serde"] }
lrtable = { version = "0.14", features = ["serde"] }
lrlex = "0.14"
lrpar = { version = "0.14", features = ["serde"] }
indexmap = "2.13"
clap = { version = "4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
numpy = "0.28"
lru = "0.16"
anyhow = "1.0"
rayon = "1.11"
pyo3 = { version = "0.28", features = [
  "anyhow",
  "abi3-py310",
  "extension-module",
] }

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"

[[bench]]
name = "benchmark"
harness = false
